--- a/!df.html
+++ b/!df.html
@@ -40,7 +40,7 @@ var motor = {
     },
 
     starter : function() {
-        document.write("Nyala njing");
+        document.write("Nyalakan Mesin");
     },
     
     lampu: function () {
